--- a/main.css
+++ b/main.css
@@ -2442,8 +2442,8 @@ polygon {
     border-radius: var(--border-radius);
 }
 
-.shadowBox1 {
-    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+.shadowBoxPrototype {
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .shadowBox {
