--- a/main.css
+++ b/main.css
@@ -139,7 +139,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.95em 1vw;
+    padding: 0.95em 1.6vw;
     border-radius: 0;
     transition: .2s all;
 }
@@ -179,12 +179,12 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 0 auto;
+    margin: 0;
     text-align: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     -ms-flex-pack: distribute;
-    justify-content: space-around;
+    justify-content: flex-end;
 }
 
 a.nav-link {
@@ -194,7 +194,6 @@ a.nav-link {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     color: var(--grey-darkest);
-
 }
 
 a.active.SEER {
@@ -208,7 +207,7 @@ a.active.SEER {
 .bar {
     border-radius: 1em;
     width: 1.5rem;
-    height: 2px;
+    height: 0.1em;
     display: block;
     padding: 0;
     margin: 6px;
@@ -513,7 +512,9 @@ ul, ol {
 li {
     margin-left: 1rem;
 }
-
+li.marginZero {
+    margin-left: 0;
+}
 li .rightPanel {
     font-size: 12px;
     line-height: 16px;
@@ -1198,11 +1199,9 @@ button.passwordArr {
         transform: translate(-50%, -50%);
         left: 50%;
     }
-
     .font300-1080 {
         font-weight: 300 !important;
         color: var(--grey-darkest) !important;
-
     }
 
     body .heightXS {
@@ -1412,7 +1411,7 @@ button.passwordArr {
     .nav-menu {
         background-color: var(--white);
         width: 100%;
-        height: 100%;
+        height: 100vh;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -1425,7 +1424,7 @@ button.passwordArr {
         justify-content: flex-start;
         align-items: left;
         position: fixed;
-        top: 81px;
+        top: 3.599em;
         right: -112%;
         -webkit-transition: 0.5s;
         transition: 0.5s;
@@ -1437,37 +1436,21 @@ button.passwordArr {
     .nav-item {
         background-color: var(--white);
     }
-
-
-    /*  2 1080 */
-
-
-    .nav-menu li {
-        padding: 0;
-        margin: 0;
-    }
-
     body .box {
         width: 100%;
         justify-content: flex-start;
         border-bottom: 1px solid var(--grey-lightest);
+        padding: 0.95em 1.2em;
+
     }
 
-
-
+    /*  2 1080 */
     body .navbar:hover .box:hover {
         z-index: 99;
-
         transform: scale(1);
         filter: blur(0px);
         opacity: 1;
         box-shadow: rgba(109, 109, 109, 0) 0px 25px 20px -20px;
-
-    }
-
-    a.nav-link {
-        margin: 1rem;
-        z-index: 1;
     }
 
     /*         color: var(--black-less);   */
