--- a/main.css
+++ b/main.css
@@ -206,8 +206,8 @@ a.active.SEER {
 
 .bar {
     border-radius: 1em;
-    width: 1.5rem;
-    height: 0.1em;
+    width: 2em;
+    height: 2px;
     display: block;
     padding: 0;
     margin: 6px;
@@ -1376,7 +1376,7 @@ button.passwordArr {
 
     body .hamburger {
         display: block;
-        padding: 2.6em;
+        padding: 2.4em;
         width: 2em;
     }
 
@@ -1411,7 +1411,7 @@ button.passwordArr {
     .nav-menu {
         background-color: var(--white);
         width: 100%;
-        height: 100vh;
+        height: 300%;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -1440,8 +1440,13 @@ button.passwordArr {
         width: 100%;
         justify-content: flex-start;
         border-bottom: 1px solid var(--grey-lightest);
-        padding: 0.95em 1.2em;
+        padding: 0.95em 1.4em;
 
+    }
+    body .navbar:hover .box {
+        filter: blur(0px);
+        opacity: 1;
+        transform: scale(1);
     }
 
     /*  2 1080 */
@@ -1481,6 +1486,7 @@ button.passwordArr {
 
 
 @media all and (max-width: 680px) {
+
 
     body .displayPhone {
         display: block;
@@ -2198,10 +2204,10 @@ input:checked~label.SEER {
 .logo {
 
     padding: 1em;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 300;
     /* margin-right: 8%; */
-    color: var(--black);
+    color: var(--SiteWide);
 }
 
 .wrapper {
@@ -2211,18 +2217,15 @@ input:checked~label.SEER {
 
 
 @media screen and (max-width: 480px) {
-    a.nav-link {
-        padding: 0.75rem 0;
+    body .box {
+        padding: 0.95em 1.0em;
     }
 
     body .cardAPPOINTA {
         border-radius: 1.2em;
     }
 
-    body .nav-item {
-        padding-left: 0.6em !important;
-        background-color: var(--white);
-    }
+
 
     body .widthL {
         width: 22em;
