--- a/main.css
+++ b/main.css
@@ -665,20 +665,20 @@ h6 {
 h1 {
     font-weight: 500;
 
-    font-size: 2em;
-}
-
-h2 {
     font-size: 1.8em;
 }
 
+h2 {
+    font-size: 1.6em;
+}
+
 h3 {
-    font-size: 1.5em;
+    font-size: 1.4em;
 
 }
 
 h4 {
-    font-size: 1.3em;
+    font-size: 1.2em;
 
 }
 
@@ -1411,7 +1411,7 @@ button.passwordArr {
     .nav-menu {
         background-color: var(--white);
         width: 100%;
-        height: 300%;
+        height: 100vh;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
