--- a/main.css
+++ b/main.css
@@ -196,25 +196,33 @@ body {
     width: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    border-radius: 12px;
 
 }
 
 .dropdown-content a {
     float: none;
-    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
+    margin: 6px;
+    transition: background-color 2s ease-out 1ms
+
 }
 
 .dropdown-content a:hover {
     background-color: var(--grey-lightest);
     cursor: pointer;
+    border-radius: 6px;
+
+
 }
 
 .dropdown:hover .dropdown-content {
     display: flex;
+    transition: background-color 2s ease-in 100ms
+
 }
 
 /* drop down menu*/
