--- a/main.css
+++ b/main.css
@@ -87,7 +87,7 @@ body {
     --grey-dark: #c8c8c8;
     --grey-normal: #e4e4e4;
     --grey-light: #efefef;
-    --grey-lightest: #;
+    --grey-lightest: #F8F8F8;
 
     --SiteWide: #202020;
     /* #296448, 6eacd9, 0762ff,4f3cc9 88c5f0 current green 1b563b*/
