--- a/main.css
+++ b/main.css
@@ -2329,7 +2329,7 @@ input:checked~label.SEER {
 
 .logo {
 
-    padding: 1em;
+    padding: 0.8em;
     font-size: 1.8rem;
     font-weight: 300;
     /* margin-right: 8%; */
@@ -2864,7 +2864,10 @@ polygon {
 .t-hello {
     font-family: 'Caveat', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.5em;
+    margin: 0.4em 0;
+    color: var(--grey-darkest);
+
 }
 
 .t-hi {
