--- a/main.css
+++ b/main.css
@@ -93,10 +93,12 @@ body {
     /* #296448, 6eacd9, 0762ff,4f3cc9 88c5f0 current green 1b563b*/
     --SiteWide-dark: #7ba0a0;
 
-    --SiteWide-light: #AAD9D9;
+    --SiteWide-light: #AAD9D9;     /*never change*/
+
     /* 368661 projects 296448*/
-    --SiteWide-lighter: #cbeded;
+    --SiteWide-lighter: #e6f6f6;
     --SiteWide-lightest: #faffff;
+    --SiteWide-warm: #fcf5eb;
 
 
 
@@ -931,10 +933,9 @@ hr {
 
 /* ---- must always have for responsive*/
 .element {
-    padding: 0.8em 1em 0;
-    margin-bottom: 1em;
+    padding: 0.4em 0.5em 0;
+    margin-bottom: 0.5em;
     transition: background-color 0.3s ease;
-    border-radius: 3px;
 }
 
 .elementButton {
@@ -943,7 +944,7 @@ hr {
 }
 
 .elementInner {
-    padding: 2em;
+    padding: 1.6em;
     transition: background-color 0.3s ease;
     border-radius: 3px;
 }
@@ -1000,13 +1001,10 @@ hr {
 
 .input-field {
     position: absolute;
-    top: 43%;
-    left: 18%;
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-    width: 22em;
-
+    top: 50%;  /* position the top  edge of the element at the middle of the parent */
+    left: 50%; /* position the left edge of the element at the middle of the parent */
+    transform: translate(-50%, -50%); 
+    /* This is a shorthand of translateX(-50%) and translateY(-50%) */
 }
 
 input {
@@ -1039,7 +1037,7 @@ input {
 
 button.passwordArr {
     padding: 0;
-    margin-top: -1.9em;
+    margin-top: -1.8em;
 }
 
 .pwIncorrectHeight {
@@ -1177,31 +1175,50 @@ button.passwordArr {
 .Grid--gutters .Grid--nested .Grid-cell:first-of-type .element {
     margin-right: 1em;
 }
+/* element = elementDemo */
+
+.elementDemo {
+    padding: 0.4em 0.5em 0;
+    margin-bottom: 0.5em;
+    border-radius: 6px;
+    border: 0.01em solid var(--SiteWide-warm);
+    background: var(--SiteWide-warm);
+    transition: background-color 0.3s ease;
+}
+.elementInnerDemo {
+    padding: 0.5em;
+    transition: background-color 0.3s ease;
+    border-radius: 6px;
+    border: 0.01em solid var(--SiteWide-light);
 
 
+    background: var(--SiteWide-lightest);
+    transition: background-color 0.3s ease;
+
+}
+.elementInnerDemo:hover {
+    background: var(--SiteWide-lighter);
+}
 
 /* element = demo */
 
-
-
-
-
 .Demo {
     font-family: inherit;
-    padding: 0.8em 1em 0;
-    margin-bottom: 1em;
+    font-weight: 200;
+
+    padding: 0.4em 0.5em 0;
+    margin-bottom: 0.5em;
+    border-radius: 6px;
+    border: 0.01em solid var(--SiteWide-dark);
+
+
     background: var(--SiteWide-lightest);
     transition: background-color 0.3s ease;
-    border: 0.01em solid var(--SiteWide-dark);
-    border-radius: 6px;
-    color: var(--SiteWide-dark);
-
 }
-
 .Demo:after {
     content: "";
     display: block;
-    margin-top: 0.8em;
+    margin-top: 0.4em;
     height: 1px;
 
 }
@@ -1576,13 +1593,7 @@ button.passwordArr {
     }
 
     /* hamburger menu*/
-    body .input-field {
-        top: 38%;
-        left: 10%;
-        width: 16em;
-    }
 
-    /* password */
 
 }
 
@@ -1661,11 +1672,7 @@ button.passwordArr {
     }
 
 
-    body .input-field {
-        top: 33%;
-        left: 16%;
-        width: 14em;
-    }
+
 
     body .elementCard {
         opacity: 1.0;
@@ -2362,11 +2369,7 @@ input:checked~label.SEER {
         margin: 0 1em;
     }
 
-    body .input-field {
-        top: 23%;
-        left: 20%;
-        width: 14em;
-    }
+
 
     body .footer-logo {
         padding: 6px;
