--- a/main.css
+++ b/main.css
@@ -737,56 +737,58 @@ h6 {
 
 }
 h1 {
-    font-size: clamp(1.46em, 1.26vw, 2em);
-    /* - first one is the minimum allowed font-size.
-       - third one is the maximum allowed font-size.
-       - second argument is font-size that you wish to always have. */
+    font-size: 2em;
+ 
     }
 
 
 h2 {
-    font-size: 1.56em;
+    font-size: 1.5em;
 }
 
 h3 {
-    font-size: 1.38em;
+    font-size: 1.17em;
 
 }
 
 h4 {
-    font-size: 1.2em;
+    font-size: 1em;
 
 }
 
 h5 {
-    font-size: 1em;
+    font-size: .83em;
 }
 
 h6 {
-    font-size: 0.8em;
+    font-size: .67em;
 }
 h1.testing {
-    font-size: clamp(1.46em, 1.26vw, 2em);
+    font-size: clamp(1.5em, 1.8vw, 2.2em);
     /* - first one is the minimum allowed font-size.
        - third one is the maximum allowed font-size.
        - second argument is font-size that you wish to always have. */
+    margin: .67em 0
 }
 h2.testing {
-    font-size: clamp(1.26em, 1vw, 1.56em);
+    font-size: clamp(1.17em, 1.6vw, 1.8em);
+    margin: .75em 0
 }
 
 h3.testing {
-    font-size: clamp(1.1em, 0.8vw, 1.38em);
+    font-size: clamp(1em, 1.26vw, 1.5em);
+    margin: .83em 0
 }
 h4.testing {
-    font-size: clamp(0.8em, 0.7vw, 1.2em);
+    font-size: clamp(0.83em, 1.06vw, 1.2em);
 
 }
 h5.testing {
-    font-size: clamp(0.8em, 0.6vw, 1em);
+    font-size: clamp(0.67em, 0.88vw, 1em);
 }
 h6.testing {
-    font-size: clamp(0.8em, 0.5vw, 0.8em);
+    font-size: clamp(0.58em, 0.7vw, 0.67em);
+
 }
 strong {
     font-weight: 500;
